@@ -59,10 +59,10 @@ extern "C" {
  * Minor API changes that do not cause binary compatibility problems.
  * Should be reset to 0 when upgrading APREQ_MAJOR_VERSION
  */
-#define APREQ_MINOR_VERSION       6
+#define APREQ_MINOR_VERSION       7
 
 /** patch level */
-#define APREQ_PATCH_VERSION       4
+#define APREQ_PATCH_VERSION       0
 
 /**
  *  This symbol is defined for internal, "development" copies of libapreq.
